# ig-central

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GETTING-STARTED-GUIDE.md  HUB-TODO.md  README.md  docker-compose.prod.yml  docker-compose.yml  version-2-architecture.md  version-2-decision-tree.csv  version-2-implementation-log.md  version-2-implementation-plan.md  version-2-prompts.md  version-2-workflow-nodes.md
backend/: Dockerfile  Dockerfile.docprocessing  Dockerfile.enforcement  Dockerfile.hub  Dockerfile.llm  Dockerfile.mcp  GOVERNANCE-HUB-EXTRACTION.md  pom.xml
baselines/: 2026-04-baseline.csv  README.md
bert-classifier/: .dockerignore  Dockerfile  main.py  requirements.txt  train_worker.py
contracts/: .spectral.yaml  README.md
docs/: PROMPT-DATA-DICTIONARY-AND-DOCS.md  data-dictionary.md  gls-erd.drawio  igc-erd.drawio  service-template.md
documentation/: BERT-TRAINING-FROM-LLM-OUTPUT.md  BERT-TRAINING-IMPLEMENTATION.md  BERT-TRAINING-IMPROVEMENTS.md  BERT-TRAINING-PIPELINE.md  CONFIDENCE-AND-FEEDBACK-IMPROVEMENTS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DRIVE-LABELS-AND-EMAIL-CLASSIFICATION-PLAN.md  ISO15489_Generic_Records_Taxonomy_US_Retention.numbers  MLX-VS-OLLAMA-APPLE-SILICON.md  PAYMENTS-END-TO-END.md  PERFORMANCE-SCALING-CHALLENGES.md  PHASE-1-BLOCK-TESTING-GUIDE.md  (+9 more)
gls-bert-trainer/: .gitignore  Dockerfile  README.md  pyproject.toml
gls-bert-trainer/src/gls_bert_trainer/: __init__.py  __main__.py  config.py  publish.py  train.py
gls-bert-trainer/tests/: test_config.py  test_data.py  test_publish.py
(+1488 files in other folders)
