[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gls-bert-trainer"
version = "0.1.0"
description = "Phase 1.4 BERT trainer for the ig-central cascade. Fine-tunes ModernBERT on org-specific training samples + exports ONNX for the JVM gls-bert-inference service to load."
requires-python = ">=3.11"
authors = [
    { name = "ig-central engineering" },
]
dependencies = [
    "pymongo>=4.7",
    "minio>=7.2",
    "transformers>=4.52",
    "datasets>=2.18",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "optimum[onnxruntime]>=1.17",
    "accelerate>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
gls-bert-trainer = "gls_bert_trainer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
